added api response codes + update docs
