# dc_fin_soft/src/main/java/com/devwmu/dc_fin_soft/controllers/FinanceGroupController.java
@@ -1,6 +1,10 @@
 package com.devwmu.dc_fin_soft.controllers;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
+
 import com.devwmu.dc_fin_soft.entities.FinanceGroup;
 import com.devwmu.dc_fin_soft.repositories.FinanceGroupRepository;
 
@@ -8,6 +12,7 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
 import java.util.Optional;
+import java.util.List;
 
 // Fix outputs and inputs
 
@@ -23,16 +28,22 @@ public class FinanceGroupController {
     @GetMapping("/all")
     /** 
    * DESCRIPTION
-   * @return returns all of the rows in the finance group table
+   * @return returns all of the rows in the finance group table with a 200 response code on success. On error, the appropriate error code will be set with text body explaining the error
   */
     @Operation(
         summary = "Retrives all of the finance groups",
         description = "Takes in no input, and returns all of the rows in the Finance Group table"
     )
-    public Iterable<FinanceGroup> getAllFinanceGroups() {
-        // INPUT: N/A
-        // OUTPUT: returns all rows in the finance group table
-        return this.financeGroupRepository.findAll();
+    public ResponseEntity<?> getAllFinanceGroups() {
+        try{
+            return ResponseEntity.status(HttpStatus.OK)
+            .contentType(MediaType.APPLICATION_JSON)
+            .body(this.financeGroupRepository.findAll());
+        } catch (Exception e){
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+            .body("Error: unable to retrieve all finance groups");
+        }
     }
     
     @PutMapping("/search")
@@ -40,20 +51,20 @@ public class FinanceGroupController {
    * DESCRIPTION
    * 
    * @param filters an array of filter objects, which represents the columns, operations, and values to filter by
-   * @return the rows of finance groups that match the filters. On error, the filter will not apply. If no filters are applied, returns all of the rows. 
+   * @return the rows of finance groups that match the filters with a 200 response code on success. On error, the appropriate error code will be set with text body explaining the error. If no filters are applied, returns all of the rows. 
   */
     @Operation(
         summary = "Filters through finance groups based on specified values",
         description = "Takes in a JSON array, where each element is a Filter object consisting of the column to filter by, the operation to filter based on, and the desired value, and returns all of the rows in the Finance Group table which match the Filter objects"
     )
-    public Iterable<FinanceGroup> filterFinanceGroups(@RequestBody Filter[] filters){
+    public ResponseEntity<?> filterFinanceGroups(@RequestBody Filter[] filters){
     // custom
     // filterFinanceGroups(filterArray[]): Iterable<FinGroup> 	
         //     INPUT: filters: Filter[] -  an array of filters to apply to the table
         //      ex) [{"col":"est_attendance", "op":"geq", "val":16}] - this will apply a filter for if the estimated attendance is >= 16
         //     OUTPUT: the selected rows of the finance group table
     
-        // returns the events that match
+        // returns the finance groups that match
         Specification<FinanceGroup> spec = Specification.unrestricted();
         // goes through every filter item passed in the parameter array
         for (Filter filter: filters){
@@ -62,7 +73,8 @@ public class FinanceGroupController {
             Object value = filter.getVal();
 
             if (value == null){
-                continue;
+                return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .body("Error: No value provided for filter on column: " + col + "\n");
             }
 
             Specification<FinanceGroup> condition = null;
@@ -70,15 +82,26 @@ public class FinanceGroupController {
             switch (op) {
                 case "like":
                     try{
+                        List<String> allowedCols = List.of("title");
+                        if (!(allowedCols.contains(col.toLowerCase()))){
+                            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                            .body("Error: invalid column: " + col +  " passed with LIKE operator\n");
+                        }
                         String lower = "%" + value.toString().toLowerCase() + "%";
                         condition =  (root, query, criteraBuilder) ->
                             criteraBuilder.like(criteraBuilder.lower(root.get(col)), lower);
                         break;
                     } catch (ClassCastException e){
                         System.out.println(e + "\n\n\n");
-                        break;
+                        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                        .body("Error: non-string value passed with LIKE operator\n");
                     }
                 case "eq":
+                    List<String> notAllowedCols = List.of("title");
+                        if (notAllowedCols.contains(col.toLowerCase())){
+                            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                            .body("Error: invalid column: " + col +  " passed with EQUAL operator. Pass this with LIKE operator\n");
+                        }
                     condition = (root, query, criteriaBuilder) -> 
                         criteriaBuilder.equal(root.get(col), value);
                     break;
@@ -89,7 +112,10 @@ public class FinanceGroupController {
             }
 
         }
-        return this.financeGroupRepository.findAll(spec);
+        Iterable<FinanceGroup> financeGroups =  this.financeGroupRepository.findAll(spec);
+        return ResponseEntity.status(HttpStatus.OK)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(financeGroups);
     }
 
     @PutMapping("/add_user/user={user}")
@@ -101,7 +127,7 @@ public class FinanceGroupController {
    * DESCRIPTION
    * 
    * @param user the id of the user to be added to the finance group
-   * @return the user to be modified
+   * @return the user to be modified with a 200 response code on success. On error, the appropriate error code will be set with text body explaining the error
   */
     public FinanceGroup addUserToGroup(){
         // custom
@@ -123,7 +149,7 @@ public class FinanceGroupController {
    * DESCRIPTION
    * 
    * @param user the id of the user to be added to a finance group
-   * @return returns the user to be modified
+   * @return returns the user to be modified with a 200 response code on success. On error, the appropriate error code will be set with text body explaining the error
   */
     public FinanceGroup removeUserFromGroup(){
         // custom
@@ -145,15 +171,23 @@ public class FinanceGroupController {
    * DESCRIPTION
    * 
    * @param financeGroup a finance group object representing the group to be created
-   * @return the created group
+   * @return the created group with a 200 response code on success. On error, the appropriate error code will be set with text body explaining the error
   */
-    public FinanceGroup createGroup(@RequestBody FinanceGroup financeGroup){
+    public ResponseEntity<?> createGroup(@RequestBody FinanceGroup financeGroup){
         // createGroup(name): bool
         //     Creates a new finance group
         //      INPUT: financeGroup: FinanceGroup - the new financeGroup row to be created
         //     OUTPUT: the new finance group
         // adds the new finance group to the database
-        return this.financeGroupRepository.save(financeGroup);
+        try{
+            return ResponseEntity.status(HttpStatus.OK)
+            .contentType(MediaType.APPLICATION_JSON)
+            .body(this.financeGroupRepository.save(financeGroup));
+        } catch (Exception e){
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+            .body("Error: unable to create finance group: " + financeGroup.toString() + "\n");
+        }
+
     }
 
     @PutMapping("/remove_group/id={id}")
@@ -165,20 +199,29 @@ public class FinanceGroupController {
    * DESCRIPTION
    * 
    * @param id the id of the group to be removed
-   * @return the modifed group
+   * @return the modifed group with a 200 response code on success. On error, the appropriate error code will be set with text body explaining the error
   */
-    public FinanceGroup removeGroup(@PathVariable("id") Integer id){
+    public ResponseEntity<?> removeGroup(@PathVariable("id") Integer id){
         // removeGroup(name): bool
         //     INPUT: id: Integer - the id of the finance group to be removed
         //     OUTPUT: removed group
         // sets the deleted flag on that specific finance group to be 1
         Optional<FinanceGroup> finGroupToDeleteOptional = this.financeGroupRepository.findById(id);
         if (!finGroupToDeleteOptional.isPresent()){
-            return null;
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+            .body("Error: invalid finance group id: " + id.toString() + "\n");
         }
         FinanceGroup deleteFinGroup = finGroupToDeleteOptional.get();
         deleteFinGroup.setDeleted(1);
-        return this.financeGroupRepository.save(deleteFinGroup);
+        try{
+            return ResponseEntity.status(HttpStatus.OK)
+            .contentType(MediaType.APPLICATION_JSON)
+            .body(this.financeGroupRepository.save(deleteFinGroup));
+        } catch (Exception e){
+            e.printStackTrace();
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+            .body("Error: unable to update finance group");
+        } 
     }
 
 }
